Update static urls, model fields, admin fields, and form fields

--- a/siivagunnerdb/templates/baseLayout.html
+++ b/siivagunnerdb/templates/baseLayout.html
@@ -10,9 +10,9 @@
     <script src="{% static 'script.js' %}"></script>
     <!---->
     <!---->
-    <link rel="shortcut icon" type="image/ico" href="https://storage.cloud.google.com/siivagunner-database-media/siivagunnerdb/images/favicons/favicon-48x48.ico"/>
-    <link rel="stylesheet" href="https://storage.cloud.google.com/siivagunner-database-media/siivagunnerdb/style.css"/>
-    <script src="https://storage.cloud.google.com/siivagunner-database-media/siivagunnerdb/script.js"></script>
+    <link rel="shortcut icon" type="image/ico" href="https://storage.googleapis.com/siivagunner-database-media/siivagunnerdb/images/favicons/favicon-48x48.ico"/>
+    <link rel="stylesheet" href="https://storage.googleapis.com/siivagunner-database-media/siivagunnerdb/style.css"/>
+    <script src="https://storage.googleapis.com/siivagunner-database-media/siivagunnerdb/script.js"></script>
     <!---->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149462139-2"></script>
