Implement search saving

--- a/siivagunnerdb/channels/templates/channels/channelDetails.html
+++ b/siivagunnerdb/channels/templates/channels/channelDetails.html
@@ -11,7 +11,7 @@
     <!--
     <p>At the time of the last check, this channel had {{ channel.subscriberCount }} subscribers.</p>
     -->
-    <h4>Recently Uploaded</h4>
+    <h4>Recent Uploads</h4>
     <table class="rips">
       <tr class="rip">
         <th>Video Title</th>
