Add error 403 landing page, hide rip and channel add pages

--- a/cloudrun/siivagunnerdb/templates/baseLayout.html
+++ b/cloudrun/siivagunnerdb/templates/baseLayout.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="{% static 'style.css' %}"/>
     <script src="{% static 'script.js' %}"></script>
     <!---->
-    <!---->
     <link rel="shortcut icon" type="image/ico" href="https://storage.googleapis.com/siivagunner-database-media/siivagunnerdb/images/favicons/favicon-48x48.ico"/>
     <link rel="stylesheet" href="https://storage.googleapis.com/siivagunner-database-media/siivagunnerdb/style.css"/>
     <script src="https://storage.googleapis.com/siivagunner-database-media/siivagunnerdb/script.js"></script>
@@ -46,7 +45,7 @@
     <nav>
       <ul>
         <li><a href="{% url 'home' %}">Search database</a></li>
-        <li><a href="{% url 'rips:add' %}">Add to database</a></li>
+        <!-- <li><a href="{% url 'rips:add' %}">Add to database</a></li> -->
         <li><a href="{% url 'generate' %}">Generate rip template</a></li>
         <li><a href="{% url 'reports:add' %}">Report a bug</a></li>
       </ul>
