Add meta description

--- a/cloudrun/siivagunnerdb/templates/baseLayout.html
+++ b/cloudrun/siivagunnerdb/templates/baseLayout.html
@@ -3,6 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="A searchable database of information retrieved from SiIvaGunner videos." />
     <title>SiIvaGunner Database</title>
     <link rel="shortcut icon" type="image/ico" href="https://storage.googleapis.com/siivagunner-database-media/siivagunnerdb/images/favicons/favicon-48x48.ico"/>
     <link rel="stylesheet" href="https://storage.googleapis.com/siivagunner-database-media/siivagunnerdb/style.css"/>
