Update footer link, update .gitignore

--- a/cloudrun/siivagunnerdb/templates/baseLayout.html
+++ b/cloudrun/siivagunnerdb/templates/baseLayout.html
@@ -58,7 +58,7 @@
       </div>
     </main>
     <footer>
-      <a target="_blank" href="https://github.com/AAAAAAidan/">&copy;Aidan Zamboni</a>
+      <a target="_blank" href="https://github.com/SiIvaGunner-Database">SiIvaGunner Database</a>
     </footer>
   </body>
 </html>
