Update template generator source URL

--- a/cloudrun/siivagunnerdb/templates/generate.html
+++ b/cloudrun/siivagunnerdb/templates/generate.html
@@ -4,6 +4,6 @@
   <iframe id="templateGenerator"
     title="Rip Template Generator"
     style="width: 100%; border: none; flex-grow: 1; margin: -16px;"
-    src="https://rip-template-generator-x2snfuxbeq-uc.a.run.app/">
+    src="https://siivagunner-database.github.io/Rip-Template-Generator/">
   </iframe>
 {% endblock %}
