--- a/cloudrun/siivagunnerdb/rips/templates/rips/ripList.html
+++ b/cloudrun/siivagunnerdb/rips/templates/rips/ripList.html
@@ -1,6 +1,7 @@
 {% extends 'baseLayout.html' %}
 {% block content%}
   <h2>Search the video database</h2>
+  <p style="margin:0 0 4px 0;">Updates to the database will be paused for an indeterminate amount of time. Apologies for the inconvenience.</p>
   <form action="{% url 'rips:list' %}" method="post">
     {% csrf_token %}
     {% if request.GET.search %}
