--- a/siivagunnerdb/siivagunnerdb/youtube/channels/templates/channels/channelDetails.html
+++ b/siivagunnerdb/siivagunnerdb/youtube/channels/templates/channels/channelDetails.html
@@ -7,14 +7,14 @@
     <a class="smallText" href="https://web.archive.org/web/*/https://www.youtube.com/channel/{{ channel.id }}" target="_blank">View on the Wayback Machine</a>
     <hr />
     <p style="font-style: italic">Joined on {{ channel.publishedAt }}.</p>
-    <p style="font-style: italic">Has uploaded at least {{ ripCount }} videos.</p>
+    <p style="font-style: italic">Has uploaded at least {{ videoCount }} videos.</p>
     <p>{{ channel.description }}</p>
     <!--
     <p>At the time of the last check, this channel had {{ channel.subscriberCount }} subscribers.</p>
     -->
-    <h4>Recent Uploads (<a href="{% url 'rips:list' %}?channel={{ channel.id }}">View All</a>)</h4>
-    <table class="rips">
-      <tr class="rip">
+    <h4>Recent Uploads (<a href="{% url 'videos:list' %}?channel={{ channel.id }}">View All</a>)</h4>
+    <table class="videos">
+      <tr class="video">
         <th>Video Title</th>
         <th>Video ID</th>
         <th>Wiki Status</th>
@@ -24,16 +24,16 @@
         <th>Length</th>
         <th>Views</th>
       </tr>
-      {% for rip in rips %}
-        <tr class="rip">
-          <td><a href="{% url 'rips:details' rip.id %}">{{rip.title}}</a></td>
-          <td><a href="https://www.youtube.com/watch?v={{ rip.id }}" target="_blank">{{ rip.id }}</a></td>
-          <td>{{ rip.wikiStatus }}</td>
-          <td>{{ rip.videoStatus }}</td>
-          <td>{{ rip.uploadDate }}</td>
-          <td><a href="{% url 'channels:details' rip.channel.id %}">{{ rip.channel }}</a></td>
-          <td>{{ rip.length }}</td>
-          <td>{{ rip.viewCount }}</td>
+      {% for video in videos %}
+        <tr class="video">
+          <td><a href="{% url 'videos:details' video.id %}">{{video.title}}</a></td>
+          <td><a href="https://www.youtube.com/watch?v={{ video.id }}" target="_blank">{{ video.id }}</a></td>
+          <td>{{ video.wikiStatus }}</td>
+          <td>{{ video.videoStatus }}</td>
+          <td>{{ video.publishedAt }}</td>
+          <td><a href="{% url 'channels:details' video.channel.id %}">{{ video.channel }}</a></td>
+          <td>{{ video.length }}</td>
+          <td>{{ video.viewCount }}</td>
         </tr>
       {% endfor %}
     </table>
