--- a/siivagunnerdb/static/style.css
+++ b/siivagunnerdb/static/style.css
@@ -14,13 +14,14 @@ Input:#F0F0F0
 <hr/>:#DDDDDD
 Nav:  #BBBBBB
 Hover:#999999
-Html: #444444
+Html: #555555
 */
 
 html {
   padding: 0 calc((100% - 1024px)/2);
   height: 100%;
-  background-color: #444444;
+  background-color: #555555;
+  background-image: linear-gradient(#444444, #666666);
 }
 
 body {
@@ -200,7 +201,7 @@ th, td {
   position: fixed;
   right: 0;
   bottom: 0;
-  transition: opacity 8s ease-in 8s;
+  transition: opacity 9s ease-in 30s;
 }
 
 .gadget:hover {
