--- a/siivagunnerdb/templates/baseLayout.html
+++ b/siivagunnerdb/templates/baseLayout.html
@@ -57,7 +57,7 @@
     <footer>
       <a target="_blank" href="https://github.com/SiIvaGunner-Database">SiIvaGunner Database</a>
     </footer>
-    <!-- <img class="gadget" src="/static/gadget1.png" alt="Inspector Gadget is grinning broadly." /> -->
-    <img class="gadget" src="/static/gadget2.png" alt="Inspector Gadget is smiling at you." />
+    <!-- <img class="gadget" src="{% static 'gadget1.png' %}" alt="Inspector Gadget grins broadly." /> -->
+    <img class="gadget" src="{% static 'gadget2.png' %}" alt="Inspector Gadget smiles at you." />
   </body>
 </html>
