Update hard coded system messages

--- a/siivagunnerdb/siivagunnerdb/administration/accounts/templates/accounts/myAccount.html
+++ b/siivagunnerdb/siivagunnerdb/administration/accounts/templates/accounts/myAccount.html
@@ -2,7 +2,7 @@
 {% block content%}
   <div class="account">
     <h2>{{ user.get_username }}</h2>
-    <span class="smallText">The site is still in its early stages and accounts can not do much. In the future, you can expect a way to save rip and channel pages.</span>
+    <span class="smallText">The site is still in its early stages and accounts can not do much. More features will be added in the future.</span>
     <hr />
     <div class="gridDiv">
       <!--
