--- a/siivagunnerdb/static/style.css
+++ b/siivagunnerdb/static/style.css
@@ -22,6 +22,7 @@ html {
   height: 100%;
   background-color: #555555;
   background-image: linear-gradient(#444444, #666666);
+  background-attachment: fixed;
 }
 
 body {
@@ -155,16 +156,16 @@ table {
   font-size: 0.9em;
 }
 
-table, p {
-  white-space: pre-wrap;
-}
-
 th, td {
   border: 2px solid #BBBBBB;
   padding: 4px;
   max-width: 200px;
   overflow: hidden;
   text-align: left;
+}
+
+p {
+  white-space: pre-wrap;
 }
 
 #headerTitle {
